--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp -r dist docs"                   
+    "build": "vite build && cp -r dist/* docs"                   
   },
   "dependencies": {
     "vue": "^3.0.4"
